Replace HTML entities with literal characters in JavaDoc @code blocks
Co-authored-by: pivovarit <2182533+pivovarit@users.noreply.github.com>