@@ -176,9 +176,9 @@ public interface Value<T> extends Iterable<T> {
      * Example:
      *
      * <pre>{@code
-     * // ((1, 2), ((3))) =&gt; structure: (()(())) values: 1, 2, 3
-     * final Value&lt;?&gt; i1 = List.of(List.of(1, 2), Arrays.asList(List.of(3)));
-     * final Value&lt;?&gt; i2 = Queue.of(Stream.of(1, 2), List.of(Lazy.of(() -> 3)));
+     * // ((1, 2), ((3))) => structure: (()(())) values: 1, 2, 3
+     * final Value<?> i1 = List.of(List.of(1, 2), Arrays.asList(List.of(3)));
+     * final Value<?> i2 = Queue.of(Stream.of(1, 2), List.of(Lazy.of(() -> 3)));
      * assertThat(i1.eq(i2)).isTrue();
      * }</pre>
      * <p>
@@ -187,7 +187,7 @@ public interface Value<T> extends Iterable<T> {
      * <pre>{@code
      * o == this             : true
      * o instanceof Value    : iterable elements are eq, non-iterable elements equals, for all (o1, o2) in (this, o)
-     * o instanceof Iterable : this eq Iterator.of((Iterable&lt;?&gt;) o);
+     * o instanceof Iterable : this eq Iterator.of((Iterable<?>) o);
      * otherwise             : false
      * }</pre>
      *
